WIP tenant service and other fixes
